[gd_scene load_steps=5 format=3 uid="uid://c20m60j07xy7v"]

[ext_resource type="Script" path="res://src/drill_bit.gd" id="1_586he"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ni84o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rh7n6"]
size = Vector2(22, 22)

[sub_resource type="CircleShape2D" id="CircleShape2D_727em"]
radius = 300.0

[node name="DrillBit" type="RigidBody2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource("1_586he")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ni84o")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0

[node name="RockDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="RockDetection"]
shape = SubResource("RectangleShape2D_rh7n6")

[node name="DirtDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DirtDetection"]
shape = SubResource("RectangleShape2D_rh7n6")

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("CircleShape2D_727em")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="RockDetection" to="." method="_on_enter_rock"]
[connection signal="body_entered" from="DirtDetection" to="." method="_on_enter_dirt"]
[connection signal="body_exited" from="DirtDetection" to="." method="_on_exit_dirt"]
